maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
override def run() {
^ShortestPathMaze:2: error: expected start of definition
override def run() {
         ^ShortestPathMaze:11: error: expected class or object definition
def indicationBaggle(){
^ShortestPathMaze:25: error: expected class or object definition
def traceChemin()
^ShortestPathMaze:26: error: expected class or object definition
{
^ShortestPathMaze:42: error: expected class or object definition
def trouveForce(){
^ShortestPathMaze:57: error: Missing closing brace `}' assumed here
  if(!estFaceMur){
  ^ShortestPathMaze:62: error: Missing closing brace `}' assumed here
  if(!estFaceMur){
  ^