maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    indicationBaggle()
  	TraceChemin()
  	while(!estSurBiscuit()){
      trouveForce()
    }
  prendBiscuit()
}

def indicationBaggle(){
  var x = getMondeLargeur()
  var y = getMondeHauteur()
  for(i<-0 to x-1){
    for(j<-0 to y-1){
      if(aBiscuit(i,j)){
        setIndication(i,j,0)
        x=i
        y=j
      }
    }
  }
}

def traceChemin()
{
  for(k<-0 to getMondeLargeur()*getMondeHauteur()){
    for(i <-0 to GetMondeLargeur()-1){
      for(j <-0 to getMondeHauteur()-1){
        if(getIndication()== k){
          if(aMurNord(i,j)){
            setIndication(i,j+1,k+1)
          }else if(aMurOuest(i,j)){
            setIndication(i+1,j,k+1)
          }
        }
      }
    }
  }
}

def trouveForce(){
  var m = getX()
  var n = getY()
  var ici = getIndication(getX(),getY())
  setDirection(Direction.NORD)
  if(!estFaceMur){
    if(ici - getIndication(getX(),getY()-1)>0){
      avance()
    }
   setDirection(Direction.SUD)
  if(!estFaceMur){
    if(ici - getIndication(getX(),getY()+1)>0){
      avance()
    }
   setDirection(Direction.OUEST)
  if(!estFaceMur){
    if(ici - getIndication(getX()-1,getY())>0){
      avance()
    }
    setDirection(Direction.EST)
  if(!estFaceMur){
    if(ici - getIndication(getX()+1,getY())>0){
      avance()
    }
  }
}